2002-06-24  Han-Wen  <hanwen@cs.uu.nl>

	* lily/grob-scheme.cc: new file

	* lily/break-substitution.cc: split up break substitution
	functionality, and make a special constant stack-space version for
	lists of grobs. This should fix the problems of lily in
	combination with pthreads/qthreads.

2002-06-23  Han-Wen  <hanwen@cs.uu.nl>

	* lily/grob.cc (mark_smob): bugfix: mark X parent too.

2002-06-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely (First steps): Add missing
	quotation.

	* Documentation/topdocs/INSTALL.texi (Top): Add some warnings
	about guile --with-threads.  Hopefully this issue can be resolved
	rsn, but maybe we should even add warnings for the standard Debian
	and Red Hat packages?

	* configure.in: Warn if guile is configured to use threads.  Maybe
	we should make this an error (ie, add to REQUIRED list?)

	* config.make.in (PACKAGE_NAME):
	(PACKAGE, package):  Don't hardcode.

	* VERSION (PACKAGE_NAME): Typo fix.

2002-06-23  Han-Wen  <hanwen@cs.uu.nl>

	* input/tutorial/brahms-*.ly: new tutorial files.

	* Documentation/user/tutorial.itely: fixes. Extend cheat sheet.

	* scm/script.scm (default-script-alist): fermata is up.

	* lily/dynamic-engraver.cc (stop_translation_timestep): stop
	dynamic line spanner when there is no crescendo to connect.

	* lily/tie.cc (get_control_points): add test to avoid flat ties.

2002-06-22  Han-Wen  <hanwen@cs.uu.nl>

	* lily/note-collision.cc (check_meshing_chords): don't crash if no
	stems.

	* scm/music-functions.scm (toplevel-music-functions): new
	definition. Functions to apply automatically. Removes the need for
	explicitly doing \apply #voicify-music

	* lily/grob.cc (do_break_substitution): rename function, use
	global var for criterion argument. Reduces stack usage a little.

	* ly/engraver-init.ly (StaffContext): add Instrument_engraver

	* scripts/convert-ly.py, lily/*.cc, scm/*.scm: change
	visibility-lambda to break-visibility
